<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusableInTouchMode="true"
                android:background="@drawable/background_login"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                tools:context=".screen.activities.login.LoginActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="15dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/spacing_medium"
                android:src="@drawable/logo_login" />


            <EditText
                android:id="@+id/phone_number"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_centerVertical="true"
                android:layout_marginTop="10dp"
                android:background="@drawable/layout_transparent_bg_black_corner"
                android:drawableLeft="@drawable/phone_login"
                android:hint="@string/phone_number_hint"
                android:imeOptions="actionNext"
                android:inputType="phone"
                android:textSize="@dimen/ts_14"
                android:maxLength="11"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:textColorHint="@color/gray_status"
                android:textCursorDrawable="@drawable/cursor_drawable" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_centerVertical="true"
                android:layout_marginTop="10dp"
                android:textSize="@dimen/ts_14"
                android:background="@drawable/layout_transparent_bg_black_corner"
                android:drawableLeft="@drawable/lock_login"
                android:ems="10"
                android:fontFamily="sans-serif"
                android:hint="@string/password_hint"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLength="30"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:textColorHint="@color/gray_status"
                android:textCursorDrawable="@drawable/cursor_drawable" />

            <com.example.ducvietho.moki.utils.customview.AutoHighLightTextview
                android:id="@+id/btnSignIn"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/background_red_dark"
                android:gravity="center"
                android:text="Đăng nhập"
                android:textSize="@dimen/ts_14"
                android:textAllCaps="false"
                android:textColor="@color/white" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_large_x"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="1">

                <com.example.ducvietho.moki.utils.customview.AutoHighLightTextview
                    android:id="@+id/btnCancel"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dip_40"
                    android:layout_weight="1.0"
                    android:background="@drawable/layout_transparent_bg_red_corner"
                    android:gravity="center"
                    android:minHeight="0dp"
                    android:text="@string/button_cancel_signup"
                    android:textSize="@dimen/ts_14"
                    android:textAllCaps="false"
                    android:textColor="@color/red_dark" />
            </LinearLayout>
        </LinearLayout>

    </ScrollView>
</RelativeLayout>