<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.ducvietho.moki.screen.activities.order_detail.OrderDetailActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/navi_bar_height"
        android:background="@android:color/white">

        <com.example.ducvietho.moki.utils.customview.FontTextView
            android:id="@+id/txtName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:paddingLeft="@dimen/navi_bar_height"
            android:paddingRight="@dimen/navi_bar_height"
            android:textColor="@color/red_dark"
            android:textSize="@dimen/ts_16"
            android:visibility="visible"
            />

        <ImageButton
            android:id="@+id/btnNavLeft"
            android:layout_width="@dimen/navi_bar_height"
            android:layout_height="@dimen/navi_bar_height"
            android:layout_alignParentStart="true"
            android:adjustViewBounds="true"
            android:background="@android:color/white"
            android:scaleType="fitXY"
            android:src="@drawable/icon_back"
            android:visibility="visible"
            tools:ignore="RtlCompat" />

        <ImageButton
            android:id="@+id/btnNavRight"
            android:layout_width="@dimen/navi_bar_height"
            android:layout_height="@dimen/navi_bar_height"
            android:layout_alignParentEnd="true"
            android:adjustViewBounds="true"
            android:background="@android:color/white"
            android:src="@drawable/ic_menu_horiz_more"
            android:visibility="visible"
            tools:ignore="RtlCompat" />

        <View
            android:id="@+id/separatorLine"
            android:layout_width="match_parent"
            android:layout_height="0.5dip"
            android:layout_alignParentBottom="true"
            android:background="@color/red_dark" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_product"
            android:layout_width="match_parent"
            android:layout_height="200.0dip"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/app_name"
            android:scaleType="centerCrop" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@color/red_dark"
            android:orientation="horizontal"
            android:padding="8.0dip">

            <com.example.ducvietho.moki.utils.customview.FontTextView

                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:ellipsize="end"
                android:text="@string/price"
                android:singleLine="true"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@android:color/white" />

            <com.example.ducvietho.moki.utils.customview.FontTextView
                android:id="@+id/txtPrice"
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:gravity="right"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </LinearLayout>
    <com.example.ducvietho.moki.utils.customview.FontTextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dip_40"
        android:text="@string/buyer"
        android:gravity="center_vertical"
        android:layout_marginLeft="@dimen/dip_10"
        android:layout_marginTop="@dimen/dip_10"
        android:textSize="@dimen/ts_18"
        android:textColor="@android:color/black"
        android:textStyle="bold"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:scaleY="0.7"
        android:background="@color/gray"
        android:layout_marginRight="@dimen/dip_10"
        android:layout_marginTop="@dimen/dip_5"
        android:layout_marginLeft="@dimen/dip_10"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dip_30"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/dip_5"
        android:layout_marginLeft="@dimen/dip_15">
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="@dimen/dip_30"
            android:layout_height="match_parent"
            android:id="@+id/imgAvatar"/>
        <com.example.ducvietho.moki.utils.customview.FontTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dip_10"
            android:gravity="center_vertical"
            android:textColor="@color/app_color"
            android:textSize="@dimen/ts_14"
            android:id="@+id/tvBuyer"/>

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:scaleY="0.7"
        android:layout_marginRight="@dimen/dip_10"
        android:background="@color/gray"
        android:layout_marginTop="@dimen/dip_5"
        android:layout_marginLeft="@dimen/dip_10"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dip_30"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/dip_5"
        android:layout_marginLeft="@dimen/dip_15">
        <com.example.ducvietho.moki.utils.customview.FontTextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="Địa chỉ "
            android:gravity="center_vertical"
            android:textColor="@android:color/black"

            android:textSize="@dimen/ts_14"/>
        <com.example.ducvietho.moki.utils.customview.FontTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:paddingRight="@dimen/dip_10"
            android:textSize="@dimen/ts_14"
            android:textColor="@color/app_color"
            android:id="@+id/tvAddress"
            android:paddingLeft="@dimen/dip_26"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:scaleY="0.7"
        android:layout_marginRight="@dimen/dip_10"
        android:layout_marginTop="@dimen/dip_5"
        android:background="@color/gray"
        android:layout_marginLeft="@dimen/dip_10"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dip_30"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/dip_5"
        android:layout_marginLeft="@dimen/dip_15">
        <com.example.ducvietho.moki.utils.customview.FontTextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center_vertical"
            android:textColor="@android:color/black"
            android:textSize="@dimen/ts_14"
            android:text="@string/phone_number_hint"/>
        <com.example.ducvietho.moki.utils.customview.FontTextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center_vertical"
            android:textColor="@color/app_color"
            android:textSize="@dimen/ts_14"
            android:id="@+id/tvPhone"/>
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="@dimen/dip_30"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dip_5"
            android:layout_marginRight="@dimen/dip_10"
            android:src="@drawable/ic_phone"
            android:id="@+id/btCall"/>

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:scaleY="0.7"
        android:layout_marginTop="@dimen/dip_5"
        android:background="@color/gray"
        android:layout_marginRight="@dimen/dip_10"
        android:layout_marginLeft="@dimen/dip_10"/>
</LinearLayout>